# SlicerCore

./: README.md  apply_patch.py  common.py
.github/workflows/: build-wheels-mac.yml  build-wheels-windows.yml  build-wheels.yml  cd.yml  ci.yml  update-pypa-index.yml
patch/: CMakeLists.txt  pyproject.toml
patch/Base/Logic/: CMakeLists.txt
patch/CMake/: FindTeem.cmake  SlicerCoreSuperbuild.cmake
patch/Libs/MRML/CLI/: CMakeLists.txt
patch/Libs/MRML/Core/: CMakeLists.txt  vtkMRMLSegmentationStorageNode.cxx.patch
patch/Libs/MRML/DisplayableManager/: CMakeLists.txt
patch/Libs/MRML/Logic/: CMakeLists.txt
patch/Libs/RemoteIO/: CMakeLists.txt
patch/Libs/vtkITK/: CMakeLists.txt
patch/Libs/vtkSegmentationCore/: CMakeLists.txt
patch/Libs/vtkTeem/: CMakeLists.txt  vtkTeemNRRDReader.cxx.patch  vtkTeemNRRDReader.h.patch  vtkTeemNRRDWriter.cxx.patch  vtkTeemNRRDWriter.h.patch
patch/SlicerCore/CMake/: SlicerCoreSuperbuild.cmake
patch/SlicerCoreSDK/: README.md  pyproject.toml
patch/SlicerCoreSDK/tests/: conftest.py  test_build_module.py  test_find_package.py  test_import.py
patch/SlicerCoreSDK/third_party_patches/cmake/DCMTK/: DCMTKConfig.cmake  DCMTKConfigVersion.cmake
patch/SuperBuild/: External_ITK.cmake  External_tbb.cmake  External_vtkAddon.cmake
