[build-system]
requires = [
  "scikit-build-core",
  "vtk-sdk==9.6.0",
  "vtk-sdk-python-wheel-helper"
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
build-dir = "wheelbuild"

[tool.scikit-build.cmake.define]
BUILD_SDK = "OFF"

[project]
name = "slicer-core"
version = "5.12.0"
dependencies = ["vtk==9.6.0"]
