[build-system]
requires = [
  "scikit-build-core",
  "vtk-sdk==9.6.0",
  "vtk-sdk-python-wheel-helper"
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
build-dir = "../wheelbuild"
cmake.source-dir = ".."

[tool.scikit-build.cmake.define]
BUILD_SDK = "ON"

[project]
name = "slicer-core-sdk"
version = "5.12.0"

[project.entry-points."cmake.prefix"]
SlicerCore = "slicer_core_sdk.cmake"
